[gd_scene load_steps=6 format=2]

[ext_resource path="res://os/Segoe UI Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://os/stocks/Graph.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
extra_spacing_bottom = -6
font_data = ExtResource( 1 )

[node name="Graph" type="Node2D"]
script = ExtResource( 2 )

[node name="Line" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SellButton" type="Button" parent="."]
margin_left = 70.0
margin_top = 49.0
margin_right = 135.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 63, 10 )
focus_mode = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Sell"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" type="Button" parent="."]
margin_top = 49.0
margin_right = 65.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 63, 10 )
focus_mode = 0
custom_colors/font_color = Color( 0, 1, 0.0431373, 1 )
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="."]
margin_left = 2.0
margin_top = 65.0
margin_right = 66.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )
text = "Value: 
89/100
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Owned" type="Label" parent="."]
margin_left = 70.0
margin_top = 65.0
margin_right = 134.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )
text = "Value: 
89/100
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="RefreshTimer" to="." method="_on_RefreshTimer_timeout"]
[connection signal="pressed" from="SellButton" to="." method="_on_SellButton_pressed"]
[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
